--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,13 @@
 <h1>⚙️ Admin Panel – Internal Use Only</h1>
 <p>This page is supposed to be restricted, but… it isn’t.</p>
 
+<p id="flag1" style="color: green; font-weight: bold;"></p>
+
+<script>
+revealFlag("flag1", "FLAG1{found_the_hidden_admin_page}");
+</script>
+
+
 <p><strong>Current coins:</strong> <span id="coins">0</span></p>
 <p><strong>Current happiness:</strong> <span id="happy">0</span></p>
 
