--- a/final_evolution.html
+++ b/final_evolution.html
@@ -17,7 +17,7 @@
 <div id="locked" class="card" style="display:none">
     <p class="locked">
         This page is meant to be accessed via the correct final URL parameter:
-        <code>?final=blobQueen</code>.
+        <code></code>.
     </p>
 </div>
 
