--- a/room7.html
+++ b/room7.html
@@ -17,7 +17,7 @@
 <div id="locked" class="card" style="display:none">
     <p class="locked">
         This page is locked. Did you come here with the correct URL parameter?
-        (Example: <code>room7.html?key=haxx0r</code>)
+        
     </p>
 </div>
 
@@ -35,7 +35,7 @@
     <div id="nextClue" style="display:none; margin-top:15px;">
         <p><strong>The gate opens!</strong></p>
         <pre>
-final_evolution.html?final=blobQueen
+room8.html?key=mobileTime
         </pre>
     </div>
 
