--- a/final_evolution.html
+++ b/final_evolution.html
@@ -2,59 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Final Evolution – Blob Queen</title>
+    <title>Final Evolution – Your Blob Ascends!</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .final-pet {
+            width: 260px;
+            height: auto;
+            margin: 20px auto;
+            display: block;
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from { filter: drop-shadow(0 0 2px #ff9be6); }
+            to   { filter: drop-shadow(0 0 15px #ff4fd6); }
+        }
+
+        .story {
+            margin-top: 20px;
+            font-size: 1.15rem;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Final Evolution – Blob Queen 🌟</h1>
+<h1>✨ Final Evolution – The Blob Ascends ✨</h1>
 <p class="subtitle">
-    You guided your pet through every vulnerability and puzzle. Time for the final form.
+    You restored every shard… and uncovered the truth behind the Forgotten Registry.
 </p>
 
-<img src="res/pet_stage5.png" alt="Final Blob" class="pet-img">
+<img src="res/pet_stage5.png" alt="Final Blob" class="final-pet">
 
-<div id="locked" class="card" style="display:none">
-    <p class="locked">
-        This page is meant to be accessed via the correct final URL parameter:
-        <code></code>.
-    </p>
+<div class="card">
+    <div class="story">
+        <p>
+            As you place the final shard into your pet’s heart, a radiant light spreads across
+            the room. The once small, confused blob now glows with brilliant energy.
+        </p>
+
+        <p>
+            “You found my missing identity,” the blob whispers.  
+            “The last shard wasn’t hidden behind magic or code… it was trapped in an <strong>insecure pet registry</strong>.
+            Anyone could access any pet by simply changing <code>id</code> in the URL.  
+            And you discovered <em>my entry</em> — the forgotten Blob of legend.”
+        </p>
+
+        <p>
+            With every room, you overcame real-world vulnerabilities:
+        </p>
+
+        <ul>
+            <li>🔓 Broken access control</li>
+            <li>💾 Save-file manipulation</li>
+            <li>🧪 XSS injection</li>
+            <li>📱 Mobile-only UI flaws</li>
+            <li>🔐 Weak hashing and predictable “crypto”</li>
+            <li>🛠️ Fake login bypass</li>
+            <li>🗂️ And finally… <strong>IDOR</strong> — the key that unlocked the last shard</li>
+        </ul>
+
+        <p>
+            “Thanks to you,” the blob continues,  
+            “I have evolved into my <strong>final form</strong> — the Blob Queen.  
+            May your hacking journey be filled with curiosity, responsibility, and joy.”
+        </p>
+
+        <p style="margin-top: 15px;">
+            🎉 <strong>Congratulations! You completed the PetCheat HackIt.</strong>
+        </p>
+    </div>
 </div>
 
-<div id="content" class="card" style="display:none">
-    <p>
-        Your pet glows with radiant pink light. “Thank you,” it says.
-        “You learned how fragile client-side security can be – and helped me evolve.”
-    </p>
-
-    <h3>What you exploited along the way</h3>
-    <ul>
-        <li>Hidden but unprotected admin page (Broken Access Control)</li>
-        <li>localStorage manipulation (Trusting client storage)</li>
-        <li>XSS via unsafe <code>innerHTML</code> (Injection)</li>
-        <li>Base64-encoded (but not protected) clue</li>
-        <li>Editable JSON save data with no integrity checking</li>
-        <li>DOM injection to trigger hidden logic</li>
-        <li>JavaScript logic bypass / override</li>
-    </ul>
-
-    <p>
-        <strong>Lesson:</strong> Never trust the client. Always validate and enforce on the server side – and design assuming the user can see and change everything in the browser.
-    </p>
-</div>
-
-<a class="btn" href="index.html">Back Home</a>
-
-<script>
-    const params = new URLSearchParams(window.location.search);
-    const key = params.get("final");
-
-    if (key !== "blobQueen") {
-        document.getElementById("locked").style.display = "block";
-    } else {
-        document.getElementById("content").style.display = "block";
-    }
-</script>
+<a class="btn" href="index.html">Return to Home</a>
 
 </body>
 </html>
