--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Follow the trail, hack each page, and unlock the final evolution.
 </p>
 
-<img src="res/pet_stage1.png" alt="Baby Blob" class="pet-img">
+<img src="res/smallblob.png" alt="Baby Blob" class="pet-img">
 
 <div class="card">
     <h2>How it works</h2>
