--- a/room1.html
+++ b/room1.html
@@ -12,7 +12,7 @@
     Your baby blob feels a strange power nearby… maybe someone forgot to lock an admin page.
 </p>
 
-<img src="res/pet_stage1.png" alt="Baby Blob" class="pet-img">
+<img src="res/smallblob.png" alt="Baby Blob" class="pet-img">
 
 <div class="card">
     <p>
