--- a/admin1.html
+++ b/admin1.html
@@ -12,7 +12,7 @@
     This page should never have been exposed… but here you are.
 </p>
 
-<img src="res/pet_stage2.png" alt="Child Blob" class="pet-img">
+<img src="res/smallblob.png" alt="Child Blob" class="pet-img">
 
 <div class="card">
     <p>
