--- a/room2.html
+++ b/room2.html
@@ -12,7 +12,7 @@
     Your pet needs 500 coins to grow… but you only have a few. Or do you?
 </p>
 
-<img src="res/pet_stage2.png" alt="Child Blob" class="pet-img">
+<img src="res/bigblob.png" alt="Child Blob" class="pet-img">
 
 <div id="locked" class="card" style="display:none">
     <p class="locked">
