--- a/room6.html
+++ b/room6.html
@@ -12,7 +12,7 @@
     Your pet feels lonely. The next shard reacts to a special 4-letter word in ALL CAPS…
 </p>
 
-<img src="res/pet_stage4.png" alt="Adult Blob" class="pet-img">
+<img src="res/blobwithtail.png" alt="Adult Blob" class="pet-img">
 
 <div id="locked" class="card" style="display:none">
     <p class="locked">
