--- a/room8.html
+++ b/room8.html
@@ -30,7 +30,7 @@
     “But the screen feels… too big? Maybe humans view this differently?”
 </p>
 
-<img src="res/pet_stage4.png" alt="Adult Blob" class="pet-img">
+<img src="res/shinyblob.png" alt="Adult Blob" class="pet-img">
 
 <div id="locked" class="card" style="display:none">
     <p class="locked">This page is locked. Use the correct URL parameter.</p>
