--- a/room9.html
+++ b/room9.html
@@ -12,7 +12,7 @@
     Your pet finds an old login console… but something feels “off”.
 </p>
 
-<img src="res/pet_stage3.png" alt="Teen Blob" class="pet-img">
+<img src="res/shinyblob.png" alt="Teen Blob" class="pet-img">
 
 <div id="locked" class="card" style="display:none">
     <p class="locked">Access denied. Missing correct parameter: </p>
