--- a/room10.html
+++ b/room10.html
@@ -12,7 +12,7 @@
     A mysterious stone displays a hash… but the system is embarrassingly weak.
 </p>
 
-<img src="res/pet_stage4.png" alt="Adult Blob" class="pet-img">
+<img src="res/evolvedblob.png" alt="Adult Blob" class="pet-img">
 
 <div id="locked" class="card" style="display:none">
     <p class="locked">Missing parameter></p>
