--- a/final_evolution.html
+++ b/final_evolution.html
@@ -49,27 +49,13 @@
         </p>
 
         <p>
-            With every room, you overcame real-world vulnerabilities:
-        </p>
-
-        <ul>
-            <li>🔓 Broken access control</li>
-            <li>💾 Save-file manipulation</li>
-            <li>🧪 XSS injection</li>
-            <li>📱 Mobile-only UI flaws</li>
-            <li>🔐 Weak hashing and predictable “crypto”</li>
-            <li>🛠️ Fake login bypass</li>
-            <li>🗂️ And finally… <strong>IDOR</strong> — the key that unlocked the last shard</li>
-        </ul>
-
-        <p>
             “Thanks to you,” the blob continues,  
             “I have evolved into my <strong>final form</strong> — the Blob Queen.  
             May your hacking journey be filled with curiosity, responsibility, and joy.”
         </p>
 
         <p style="margin-top: 15px;">
-            🎉 <strong>Congratulations! You completed the PetCheat HackIt.</strong>
+            🎉 <strong>Congratulations! You completed the Pet Treasure Hunt HackIt.</strong>
         </p>
     </div>
 </div>
