--- a/room2.html
+++ b/room2.html
@@ -23,13 +23,13 @@
 
 <div id="content" class="card" style="display:none">
     <p>
-        “I need at least <strong>500 coins</strong> to hold the next evolution shard,” your pet says.
+        “I need at least <strong>500 coins</strong> to hold the next evolution shard,” 
     </p>
     <p>Current coins (read from <code>localStorage</code>): <strong id="coinsValue"></strong></p>
 
     <p>
-        You don’t see any way to earn that many coins fairly here. Maybe the browser is already
-        storing the value somewhere?
+        "You don’t see any way to earn that many coins fairly here. Maybe the browser is already
+        storing the value somewhere?"
     </p>
     <p><em>Hint: Application tab → Local Storage, or DevTools console.</em></p>
 
