--- a/room4.html
+++ b/room4.html
@@ -23,7 +23,7 @@
 
 <div id="content" class="card" style="display:none">
     <p>
-        Your pet stares at a floating fragment of text. “Humans call this ‘encoding’,” it says.
+        “Is this what humans call ‘encoding’?”
     </p>
     <p>
         The shard reads:
