--- a/room6.html
+++ b/room6.html
@@ -23,7 +23,7 @@
 
 <div id="content" class="card" style="display:none">
     <p>
-        “I don’t see any button to press,” your pet says. “But the shard reacts to words that are
+        “I don’t see any button to press,” “But the shard reacts to words that are
         <strong>added</strong> to the page. Maybe you can write something directly into the page using
         the console or the Elements panel?”
     </p>
