--- a/room7.html
+++ b/room7.html
@@ -23,7 +23,7 @@
 
 <div id="content" class="card" style="display:none">
     <p>
-        “The final shard only opens if my happiness is over <strong>9000</strong>,” your pet says.
+        “The final shard only opens if my happiness is over <strong>9000</strong>,” 
         “But this button barely increases it…”
     </p>
 
